# BreUtils

./: .gitignore  BinaryTree.hpp  Buffer.hpp  CMakeLists.txt  Log.hpp  breUtils.sln  main.cpp  readme.md
breUtils/: BlockQueue.hpp  ConfigLoad.hpp  Date.hpp  Defer.hpp  EasyTest.hpp  FFHelp.hpp  FileReader.hpp  FileWriter.hpp  HexLook.hpp  Json.hpp  NifixExpression.hpp  Signal.hpp  Singleton.hpp  StringFunc.hpp  System.hpp  TestTime.hpp  Timer.hpp  prefixTree.hpp  test_TestTime.hpp  test_Timer.hpp  utils.hpp
breUtils/Json/: json_exception.hpp  json_generator.hpp  json_parse.hpp  json_tool.hpp  json_value.hpp  test_json.hpp
breUtils/Json/test/data/: legacy_test_string_unicode_05.expected  legacy_test_string_unicode_05.json
breUtils/Learn/headerTest/: A.hpp  ABCRealHead.hpp  B.hpp  C.hpp
breUtils/Math/big/: Float.hpp  Rat.hpp  int_impl.hpp
breUtils/String/: base.hpp
breUtils/configLoad/: iniConfigLoad.hpp  test.ini  test_iniConfigLoad.hpp
breUtils/crypto/: AES.hpp  ECC.hpp  Ecdsa.hpp  RSA.hpp  readme.md  test_AES.hpp  test_ECC.hpp  test_Ecdsa.hpp  test_RSA.hpp
breUtils/database/: MysqlPool.hpp  RedisMgr.hpp  RedisPool.hpp
breUtils/encoding/: HexCov.hpp
breUtils/flag/: cpp.hint  flag.hpp  flag.sln  flag.vcxproj  flag.vcxproj.filters
breUtils/net/: AsioIOContextPool.hpp  Broadcast.hpp  EchoGate.hpp  Finder.hpp  NetLogic.hpp  TCP.hpp  TCPClinet.hpp  TCPHeader.hpp  TCPManager.hpp  TCPServer.hpp  TCPSession.hpp  UDPManager.hpp  netMsgNode.hpp  test_Broadcast.hpp  test_EchoGate.hpp  test_TCPManager.hpp  test_TCPServer.hpp
breUtils/signal/: Signal.hpp  testSignal.hpp
breUtils/uuid/: main.cpp  uuid.hpp  uuid.sln  uuid.vcxproj  uuid.vcxproj.filters
src/: BlockQueue.hpp  MTQueue.h  NifixExpression.hpp  Singleton.hpp
src/Json/: json_exception.hpp
src/Math/big/: Big.hpp  big.vcxproj  readme.md
src/breUtils/: BlockQueue.hpp  MTQueue.h
src/breUtils/Json/: json_generator.hpp  json_parse.hpp  json_value.hpp
src/breUtils/Math/big/: Int.hpp  big.vcxproj  big.vcxproj.filters  forward_declarations.hpp  test.cpp
src/breUtils/flag/: flag.vcxproj  testflagMain.cpp
src/encoding/: HexCov.hpp  base64.hpp
src/flag/: flag.hpp
